k8s/mongo-express/mongo-express-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: mongoauth
  namespace: diaspomoney
spec:
  basicAuth:
    # Secret Traefik attendu: clé `users` (format htpasswd)
    secret: mongo-express-traefik-auth
