k8s/mongo-express/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express
  namespace: diaspomoney
spec:
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: 8081
  selector:
    app: mongo-express
