k8s/mongo-express/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-express-ingress
  namespace: diaspomoney
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: le
    traefik.ingress.kubernetes.io/router.middlewares: diaspomoney-mongoauth@kubernetescrd
spec:
  tls:
  - hosts:
      - mongo.diaspomoney.fr
    secretName: mongo-express-tls
  rules:
    - host: mongo.diaspomoney.fr
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: mongo-express
              port:
                number: 8081
